# fastapi_template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
src/: main.py
src/basic_utils/: config.py  models.py
{{ cookiecutter.project_slug }}/: Dockerfile  pyproject.toml
{{ cookiecutter.project_slug }}/src/: main.py
{{ cookiecutter.project_slug }}/src/basic_utils/: auth_dependencies.py  config.py  database.py  jwt_utils.py  logger.py  redis_utils.py
{{ cookiecutter.project_slug }}/src/middleware/: timing.py
{{ cookiecutter.project_slug }}/src/migrations/: env.py
