[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.135.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis[hiredis]>=7.4.0",
    "sqladmin[full]>=0.24.0",
    "sqlalchemy>=2.0.48",
]
